<resources>
    <string name="app_name">TaskN20</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_user">Add User</string>
    <string name="remove_user">Remove User</string>
    <string name="update_user">Update User</string>
    <string name="go_back">Go Back</string>
    <string name="number_of_active_users">Number of active users:</string>
    <string name="email">Email</string>
    <string name="age">Age</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
</resources>